--- a/.github/workflows/main_speedybackend.yml
+++ b/.github/workflows/main_speedybackend.yml
@@ -34,7 +34,7 @@ jobs:
 
       - name: Zip artifact for deployment
         run: |
-          cd dashoard
+          cd dashard
           zip release.zip ./* -r
 
       - name: Upload artifact for deployment jobs
@@ -42,7 +42,7 @@ jobs:
         with:
           name: python-app
           path: |
-            dashboard/release.zip
+            dashbard/release.zip
             !venv/
 
   deploy:
