--- a/.github/workflows/main_speedybackend.yml
+++ b/.github/workflows/main_speedybackend.yml
@@ -34,7 +34,7 @@ jobs:
 
       - name: Zip artifact for deployment
         run: |
-          cd dashard
+          cd dashbard
           zip release.zip ./* -r
 
       - name: Upload artifact for deployment jobs
