--- a/.github/workflows/main_speedybackend.yml
+++ b/.github/workflows/main_speedybackend.yml
@@ -38,6 +38,7 @@ jobs:
         with:
           name: python-app
           path: |
+            .
             !venv/
 
   deploy:
@@ -52,10 +53,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: python-app
-
-      - name: Unzip artifact for deployment
-        run: unzip release.zip
-
+          path: .
       
       - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v2
