--- a/.github/workflows/main_speedybackend.yml
+++ b/.github/workflows/main_speedybackend.yml
@@ -38,7 +38,7 @@ jobs:
         with:
           name: python-app
           path: |
-            .
+            cd dashbard
             !venv/
 
   deploy:
