--- a/.github/workflows/main_speedybackend.yml
+++ b/.github/workflows/main_speedybackend.yml
@@ -38,7 +38,7 @@ jobs:
         with:
           name: python-app
           path: |
-            cd dashbard
+            .
             !venv/
 
   deploy:
@@ -53,7 +53,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: python-app
-          path: cd dashbard
+          path: .
       
       - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v2
